feat: add createdAt field to waste
